--- a/main.tex
+++ b/main.tex
@@ -173,7 +173,7 @@
   
   \textit{Variance}: $\sigma^2 = \frac{2d_2^2(d_1 + d_2 - 2)}{d_1(d_2 - 2)^2(d_2 - 4)}$ for $d_2 > 4$
   \begin{center}
-    \includegraphics*[width=0.5\textwidth]{fdistribution.png}
+    \includegraphics*[width=0.3\textwidth]{fdistribution.png}
   \end{center}
           
   \end{multicols}
@@ -197,7 +197,9 @@
 
 \textit{Variance}: $\sigma^2 = p(1-p)$
 
-\textit{Figure Placeholder}
+\begin{center}
+  \includegraphics*[width=0.7\textwidth]{bernoulli.png}
+\end{center}
 
 \end{mdframed}
 
